k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "blog"
  labels:
    app: "blog"
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: "blog"
  template:
    metadata:
      labels:
        app: "blog"
    spec:
      imagePullSecrets:
        - name: git2.riper.fr-key
      volumes:
        - name: blog-volume
          persistentVolumeClaim:
            claimName: blog-pvc
      containers:
        - name: "nginx"
          image: "git2.riper.fr/ztec/blog:102"
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "0.01"
              memory: "12Mi"
            limits:
              cpu: "0.1"
              memory: "12Mi"
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          volumeMounts:
            - mountPath: /var/log/nginx
              subPath: logs
              name: blog-volume
