k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "blog"
  labels:
    app: "blog"
spec:
  type: "NodePort"
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: "blog"
